# poetry_projects

./: ..gitignore.un~  .gitignore
intermediate_python/: pyproject.toml
intermediate_python/src/: lists.py  testjson.py
playwright_test/: 0675b138-f64d-4829-9bb1-8c002d98bf0f-container.json  07c82a3c-4d6a-4fe8-b4f8-25c804022178-container.json  102e37c1-c04f-41a9-9cc7-d3761fbc75e2-container.json  38b6a710-ccc2-4660-bb3d-e6791f207514-container.json  3c8e89c3-e019-4b56-b10c-511700711bf6-container.json  8094e547-38a6-4b6e-bf1f-29be7df70db7-container.json  892c9553-abfa-4343-aa94-5d967dd3926d-container.json  90f7381d-a3dc-40ad-894f-33ea37afdd5a-container.json  ac5db895-22db-4354-a6c1-7d6147d0c04b-container.json  b343ad18-d5a3-4573-9d2b-ef5beabd942b-container.json  c15fdfd1-f1cc-4e0f-adb8-167a0036215e-container.json  d2363e58-e954-410f-bbbd-7e59dc81e95a-container.json  d8a35a94-4faa-46e6-b601-135f23755968-container.json  d94f0985-7f6b-4ff1-b7d5-153d9d6969b7-result.json  e1a99c3f-d266-4ab9-83a6-920399f466cb-container.json  f78caaa7-68e9-42de-8454-5e3e7102d7dc-container.json  pyproject.toml  test_land_reg.py  test_land_reg_two.py  test_my_application.py  test_orangehrm.py
playwright_test/$PWD/: 3f4e6353-2293-425c-83f3-e8e2e8578e30-attachment.txt  40613fd9-ee4a-4016-8fe3-077b5113b161-attachment.txt  7914d5ef-603c-4dd3-b773-7fa3139f6a46-attachment.txt  92799ca2-8821-4339-959d-9421df6912f8-attachment.txt  afd031f1-500e-4676-9478-13abd69e671d-attachment.txt
selenium_projects/: pyproject.toml  test_webdrivertest1.py
