[tool.poetry]
name = "intermediate-python"
version = "0.1.0"
description = ""
authors = ["zubby--samsung <zubbyik@gmail.com>"]
readme = "README.md"
packages = [{include = "intermediate_python"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
